feat!: fixes archive workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,7 @@ jobs:
       uses: thedoctor0/zip-release@0.7.5
       with:
         type: 'zip'
+        path: 'release'
         directory: 'release'
         filename: 'release.zip'
         exclusions: '*.git* /*node_modules/* .editorconfig'
