--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,7 @@ jobs:
       uses: thedoctor0/zip-release@0.7.5
       with:
         type: 'zip'
-        path: '/tmp/release'
+        directory: '/tmp/release'
         filename: 'release.zip'
         exclusions: '*.git* /*node_modules/* .editorconfig'
 
