feat(.gitignore)!: added tf gitignore

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,10 +6,10 @@ repos:
       - id: terraform_docs
       - id: terraform_validate
         exclude: '^[^/]+$'
-      - id: terraform_checkov
-        args:
-          - --args=--quiet
-          - --args=--skip-framework=cloudformation
+      # - id: terraform_checkov
+      #   args:
+      #     - --args=--quiet
+      #     - --args=--skip-framework=cloudformation
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
